# datamodel

./: .travis.yml  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  StarFlow_age_posterior.yaml  mos-target.txt  readthedocs.yml  setup.cfg  silo_manga_detections.yaml  silo_manga_stack_data.yaml
.github/workflows/: build.yml  check_paths.yml  create_pr.yml  docs.yml  pages.yml  sphinx.yml  update_access.yml  update_tree.yml
data/access/: apVisit.access  gimg.access
data/access/APOGEE_REDUX/: allStar.access  allVisit.access  apStar.access  apVisit.access
data/access/BOSS_SPECTRO_REDUX/: spAll-PLATE-MJD.access  spAll_PLATE_MJD.access  spField.access  spZbest.access  spZline.access  spec.access
data/access/EBOSS_SANDBOX/: silo_eboss_detections.access
data/access/MWM_ASTRA/: summary_classify_apstar.access  summary_classify_apvisit.access
data/access/ROBOSTRATEGY_DATA/: rsFields.access
data/md/BOSS_SPECTRO_REDUX/RUN2D/: spAll.md
data/md/MWM_ASTRA/ASTRA_VERS/: summary_classify_apstar.md  (+1 more)
datamodel/: phases.yaml  releases.yaml  surveys.yaml  vacs.1.yaml  vacs.yaml  variants.yaml  versions.yaml
datamodel/products/access/: AllStarSSPP.access  DA_DWD.access  DL1_spec_SDSSV_eROSITA.access  DL1_spec_eROSITA_eRASS1.access  DR19Q_prop.access  DR20Q_prop.access  DRQ.access  DRQ_sup.access  DRQ_superset.access  DRQv.access  DRQv_superset.access  GravPot16.access  PawlikMorph.access  SDSSV_DA_df.access  SciExp.access  StarFlow_age_posterior.access  StarFlow_mass_posterior.access  StarFlow_summary.access  allPlates.access  allStar.access  allStarSSPP.access  allVisit.access  allVisit_MADGICS.access  allspec.access  allspec_parquet.access  ap1D.access  ap2D.access  ap2Dmodel.access  apBPM.access  apCframe.access  apDark.access  apDarkRate.access  apDetector.access  apEPSF.access  apETrace.access  apFPILines.access  apField.access  apFieldVisits.access  apFlat.access  apFlux.access  (+718 more)
datamodel/products/bash/: mos_target.sh
datamodel/products/json/: AllStarSSPP.json  DA_DWD.json  DL1_spec_SDSSV_IPL3_eROSITA_eRASS1.json  DL1_spec_SDSSV_eROSITA.json  DL1_spec_eROSITA_eRASS1.json  DR19Q_prop.json  DR20Q_prop.json  DRQ.json  DRQ_sup.json  DRQ_superset.json  DRQv.json  DRQv_superset.json  GravPot16.json  PawlikMorph.json  SDSSV_DA_df.json  SciExp.json  StarFlow_age_posterior.json  StarFlow_mass_posterior.json  StarFlow_summary.json  allPlates.json  allStar.json  allStarSSPP.json  allVisit.json  allVisit_MADGICS.json  allspec.json  allspec_parquet.json  ap1D.json  ap2D.json  ap2Dmodel.json  apBPM.json  apCframe.json  apDark.json  apDarkRate.json  apDetector.json  apEPSF.json  apETrace.json  apFPILines.json  apField.json  apFieldVisits.json  apFlat.json  (+734 more)
datamodel/products/md/: AllStarSSPP.md  DA_DWD.md  DL1_spec_SDSSV_IPL3_eROSITA_eRASS1.md  DL1_spec_SDSSV_eROSITA.md  DL1_spec_eROSITA_eRASS1.md  DR19Q_prop.md  DR20Q_prop.md  DRQ.md  DRQ_sup.md  DRQ_superset.md  DRQv.md  DRQv_superset.md  GravPot16.md  PawlikMorph.md  SDSSV_DA_df.md  SciExp.md  StarFlow_age_posterior.md  StarFlow_mass_posterior.md  StarFlow_summary.md  allPlates.md  allStar.md  allStarSSPP.md  allVisit.md  allVisit_MADGICS.md  allspec.md  ap1D.md  ap2D.md  ap2Dmodel.md  apBPM.md  apCframe.md  apDark.md  apDarkRate.md  apDetector.md  apEPSF.md  apETrace.md  apFPILines.md  apField.md  apFieldVisits.md  apFlat.md  apFlux.md  (+731 more)
datamodel/products/yaml/: AllStarSSPP.yaml  DA_DWD.0.yaml  DA_DWD.1.yaml  DA_DWD.yaml  DL1_spec_SDSSV_IPL3_eROSITA_eRASS1.yaml  DL1_spec_SDSSV_eROSITA.yaml  DL1_spec_eROSITA_eRASS1.yaml  DR19Q_prop.yaml  DR20Q_prop.yaml  DRQ.yaml  DRQ_sup.yaml  DRQ_superset.yaml  DRQv.yaml  DRQv_superset.yaml  GravPot16.yaml  PawlikMorph.yaml  SDSSV_DA_df.yaml  SDSSV_DA_df.yaml.bump0  SciExp.yaml  StarFlow_age_posterior.yaml  StarFlow_age_posterior.yaml.bump0  StarFlow_mass_posterior.yaml  StarFlow_mass_posterior.yaml.bump0  StarFlow_summary.yaml  allPlates.yaml  allStar.yaml  allStarSSPP.yaml  allVisit.yaml  allVisit_MADGICS-0.yaml  allVisit_MADGICS.yaml  allspec.0.yaml  allspec.1.yaml  allspec.yaml  allspec_parquet.yaml  ap1D.yaml  ap2D.yaml  ap2Dmodel.yaml  apBPM.yaml  apCal.yaml  apCframe.yaml  (+837 more)
docs/: README.md  _config.yml  generate_mds.py
docs/sphinx/: adding_files.rst  api.rst  commands.rst  conf.py  design.rst  examples.rst  examples_design.rst  examples_generate.rst  generate.rst  index.rst  intro.rst  manipulate.rst  navigate.rst
docs/sphinx/_static/: example.csv
etc/: datamodel.module
python/datamodel/: __init__.py  cli.py  exceptions.py
python/datamodel/command/: __init__.py  command.py  install.py
python/datamodel/generate/: Generate.py  __init__.py  changelog.py  datamodel.py  generate.py  parse.py  stub-nobug.py  stub.py
python/datamodel/git/: git.py
python/datamodel/gitio/: __init__.py  gitio.py
python/datamodel/io/: loaders.py  move.py
python/datamodel/models/: __init__.py  base.py  levels.py  releases.py  surveys.py  vacs.py  validators.py  versions.py  yaml.py
python/datamodel/products/: __init__.py  product.py
python/datamodel/templates/: stub.html  stub.md  stub.yaml  wiki-page.html  wiki-parent.html
python/datamodel/tree/: check.py
python/datamodel/validate/: __init__.py  add.py  check.py  models.py
python/datamodel/wiki/: __init__.py  page.py  remote.py
tests/: conftest.py  test_main.py
tests/cli/: __init__.py  test_commands.py
tests/command/: conftest.py  test_install.py
tests/data/: test_valid.yaml  test_valid_fits.yaml  test_valid_h5.yaml  test_valid_noaccess.yaml  test_valid_par.yaml  test_valid_parquet.yaml
tests/generate/: test_datamodel.py  test_design.py  test_filetypes.py  test_parse.py
tests/git/: test_git.py
tests/io/: test_loaders.py  test_move.py
tests/models/: test_models.py
tests/products/: test_products.py
tests/validate/: test_checks.py  test_tree.py
(+89 files in other folders)
