[metadata]
name = sdss-datamodel
version = 0.3.4-alpha
author = Joel Brownstein
author_email = joelbrownstein@sdss.org
description = SDSS-V Datamodel Project
url = https://github.com/sdss/datamodel
project_urls =
	Repository = https://github.com/sdss/datamodel
	Documentation = https://sdss-datamodel.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
	= python
install_requires =
	sdss-tree>=3.0.7
	sdss-access>=1.1.1
	sdsstools>=0.4.6
	astropy>=4.1.0
	six>=1.14.0
	pydantic>=1.6.1
	click>=7.1
	cloup>=0.7.1
	orjson>=3.5.3
	fuzzy_types>=0.1.3
	pydl>=0.7.0

scripts =
	# vesitigial scripts - keeping for backwards compatibility
	bin/datamodel_generate
	bin/datamodel_install

[options.entry_points]
console_scripts=
	datamodel = datamodel.cli:cli

[options.packages.find]
where =
	python

[options.package_data]
datamodel =
	etc/*

[options.extras_require]
dev =
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	# The following are needed because sdsstools[dev] as an extra not always
	# gets installed. See https://github.com/pypa/pip/issues/4957.
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
	deepdiff>=5.5.0
docs =
	Sphinx>=3.0.0,<4
	sphinx-click>=2.6
	furo>=2021.6.18b36
	sphinx-copybutton>=0.3.3
	sphinx-inline-tabs>=2021.3.28b7
	sphinx-issues>=1.2.0

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	SDSS
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = datamodel
known_sdss_party =
	sdssdb
	sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov datamodel --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/datamodel/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
